<resources>
    <string name="app_name">mob2.1firebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="enter_a_description">Enter a Description</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="enter_a_location">Enter a Location</string>
    <string name="enter_a_time">Enter a Time</string>
    <string name="enter_a_user_name">Enter a User Name</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="enter_email">Enter email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="user_email">User Email</string>
</resources>